finished spring boot module (#3)