@@ -1,20 +1,27 @@
 package org.edu.fpm.gym.service;
 
-import org.edu.fpm.gym.dto.TrainerProfileDTO;
-import org.edu.fpm.gym.dto.TrainerUpdateProfileDTO;
-import org.edu.fpm.gym.dto.TrainingDTO;
-import org.edu.fpm.gym.entity.*;
+import lombok.SneakyThrows;
+import org.edu.fpm.gym.dto.trainer.TrainerDTO;
+import org.edu.fpm.gym.dto.trainer.TrainerUpdateProfileDTO;
+import org.edu.fpm.gym.dto.training.TrainingDTO;
+import org.edu.fpm.gym.dto.user.UserDTO;
+import org.edu.fpm.gym.entity.Trainee;
+import org.edu.fpm.gym.entity.Trainer;
+import org.edu.fpm.gym.entity.TrainingType;
+import org.edu.fpm.gym.entity.User;
 import org.edu.fpm.gym.repository.TrainerRepository;
+import org.edu.fpm.gym.utils.TestDataFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -25,46 +32,60 @@ class TrainerServiceTest {
     @Mock
     private TrainerRepository trainerRepository;
 
+    @Mock
+    private UserService userService;
+
+    @Mock
+    AuthService authService;
+
     @InjectMocks
     private TrainerService trainerService;
 
+
+
     private Trainer trainer;
+    private TrainingType trainingType;
+    private TrainerUpdateProfileDTO updateProfile;
+
+    private final String username = "john.doe";
+    private final String password = "password";
 
     @BeforeEach
     public void setUp() {
-        TrainingType trainingType = new TrainingType();
-        trainingType.setTrainingTypeName("Yoga");
+        trainingType = TestDataFactory.createTrainingType();
 
-        trainer = new Trainer();
-        trainer.setUser(new User());
-        trainer.getUser().setFirstName("John");
-        trainer.getUser().setLastName("Doe");
-        trainer.getUser().setUsername("john.doe");
-        trainer.getUser().setPassword("testPassword");
-        trainer.getUser().setIsActive(true);
-        trainer.setSpecialization(trainingType);
-        trainer.setTrainees(new HashSet<>());
+        updateProfile = new TrainerUpdateProfileDTO("john.doe", "UpdatedJohn",
+                        "UpdatedDoe", trainingType, true);
 
+        trainer = TestDataFactory.createTrainer(TestDataFactory.createUser("john.doe"), trainingType);
     }
 
     @Test
     void createTrainer_Test() {
-        String username = "john.doe";
-        String password = "testPassword";
-        when(trainerRepository.save(trainer)).thenReturn(trainer);
+        String firstName = "John";
+        String lastName = "Doe";
 
-        Trainer createdTrainer = trainerService.createTrainer(trainer);
+        var trainerDTO = new TrainerDTO(
+                new UserDTO(firstName, lastName, username, true), trainingType);
 
-        verify(trainerRepository).save(trainer);
-        assertEquals(username, trainer.getUser().getUsername());
-        assertEquals(password, trainer.getUser().getPassword());
-        assertEquals(createdTrainer, trainer);
+        when(userService.generateUsername(firstName, lastName)).thenReturn(username);
+        when(userService.generatePassword()).thenReturn(password);
+
+        when(trainerRepository.save(any(Trainer.class))).thenReturn(trainer);
+
+        Trainer createdTrainer = trainerService.createTrainer(trainerDTO);
+
+        verify(trainerRepository, times(2)).save(any(Trainer.class));
+
+        assertEquals(username, createdTrainer.getUser().getUsername());
+        assertEquals(password, createdTrainer.getUser().getPassword());
+        assertEquals(firstName, createdTrainer.getUser().getFirstName());
+        assertEquals(lastName, createdTrainer.getUser().getLastName());
+        assertEquals(trainingType, createdTrainer.getSpecialization());
     }
 
     @Test
     void getTrainerByUsername_Test() {
-        String username = "John.Doe";
-
         when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(trainer);
         Trainer foundTrainer = trainerService.getTrainerByUsername(username);
         verify(trainerRepository).findTrainerByUser_Username(username);
@@ -73,117 +94,97 @@ class TrainerServiceTest {
 
     @Test
     void switchTrainerActivation_Test() {
-        String username = "johndoe";
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+
         boolean isActive = true;
 
-        trainerService.switchTrainerActivation(username, isActive);
+        trainerService.switchTrainerActivation(username, isActive, password);
 
         verify(trainerRepository, times(1)).switchActivation(username, isActive);
     }
 
     @Test
     void deleteTrainer_Test() {
-        String username = "John.Doe";
-
-        trainerService.deleteTrainer(username);
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        trainerService.deleteTrainer(username, password);
         verify(trainerRepository).deleteTrainerByUser_Username(username);
     }
 
     @Test
+    @SneakyThrows
     void getAvailableTrainersForTrainee_Test() {
-        String traineeUsername = "traineeUsername";
-        when(trainerRepository.findAvailableTrainersForTrainee(traineeUsername)).thenReturn(Collections.singletonList(trainer));
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        when(trainerRepository.findAvailableTrainersForTrainee(username)).thenReturn(Collections.singletonList(trainer));
 
-        List<Trainer> availableTrainers = trainerService.getAvailableTrainersForTrainee(traineeUsername);
+        List<Trainer> availableTrainers = trainerService.getAvailableTrainersForTrainee(username, password);
 
-        verify(trainerRepository).findAvailableTrainersForTrainee(traineeUsername);
+        verify(trainerRepository).findAvailableTrainersForTrainee(username);
         assertEquals(1, availableTrainers.size());
-        assertEquals(trainer, availableTrainers.get(0));
+        assertEquals(trainer, availableTrainers.getFirst());
     }
     @Test
+    @SneakyThrows
     void getTrainingsForTrainer_Test() {
-        String username = "johndoe";
-        LocalDate fromDate = LocalDate.now().minusDays(1);
-        TrainingType trainingType = new TrainingType();
-        trainingType.setTrainingTypeName("Cardio");
-        LocalDate toDate = LocalDate.now();
-
-        String traineeName = "Trainee";
-        Training training = new Training();
-        training.setTrainingName("Cardio");
-        training.setTrainingDate(LocalDate.now());
-        training.setTrainingType(trainingType);
-        training.setTrainingDuration(60);
-
-        Trainee trainee = new Trainee();
+        var training = TestDataFactory.createTraining(trainer);
+        var trainingRequest = TestDataFactory.createTrainingRequestDTO();
+        var trainee = new Trainee();
         trainee.setUser(new User("Trainee", "John", "Doe", true));
-
         training.setTrainee(trainee);
-        when(trainerRepository.getTrainingsForTrainer(username, fromDate, toDate, traineeName))
+
+        when(authService.isAuthenticateUser(trainingRequest.username(), trainingRequest.password())).thenReturn(true);
+        when(trainerRepository.getTrainingsForTrainer(
+                trainingRequest.username(),
+                trainingRequest.periodFrom(),
+                trainingRequest.periodTo(),
+                trainingRequest.trainerName()))
                 .thenReturn(List.of(training));
 
-        List<TrainingDTO> trainings = trainerService.getTrainingsForTrainer(username, fromDate, toDate, traineeName);
+        List<TrainingDTO> trainings = trainerService.getTrainingsForTrainer(trainingRequest);
 
         assertNotNull(trainings);
         assertEquals(1, trainings.size());
-        assertEquals("Cardio", trainings.get(0).getTrainingName());
-        assertEquals("John", trainings.get(0).getUserName());
+        assertEquals("Cardio Workout", trainings.getFirst().trainingName());
+        assertEquals("John", trainings.getFirst().userName());
     }
 
     @Test
+    @SneakyThrows
     void getTrainerProfile_Test() {
-        String username = "johndoe";
-
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
         when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(trainer);
 
-        TrainerProfileDTO profile = trainerService.getTrainerProfile(username);
+        var profile = trainerService.getTrainerProfile(username, password);
 
         assertNotNull(profile);
-        assertEquals("John", profile.getFirstName());
-        assertEquals("Doe", profile.getLastName());
-        assertEquals("Yoga", profile.getTrainingType().getTrainingTypeName());
+        assertEquals("John", profile.firstName());
+        assertEquals("Doe", profile.lastName());
+        assertEquals("Cardio", profile.trainingType().getTrainingTypeName());
     }
 
     @Test
+    @SneakyThrows
     void updateTrainerProfile_Test() {
-        TrainerUpdateProfileDTO updateProfile = new TrainerUpdateProfileDTO();
-        TrainingType trainingType = new TrainingType();
-        trainingType.setTrainingTypeName("Yoga");
-
-        updateProfile.setUsername("johndoe");
-        updateProfile.setFirstName("UpdatedJohn");
-        updateProfile.setLastName("UpdatedDoe");
-        updateProfile.setTrainingType(trainingType);
-        updateProfile.setActive(true);
-
-        when(trainerRepository.findTrainerByUser_Username("johndoe")).thenReturn(trainer);
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(trainer);
         when(trainerRepository.updateTrainerByUserUsername(anyString(), any(Trainer.class))).thenReturn(trainer);
 
-        TrainerProfileDTO updatedProfile = trainerService.updateTrainerProfile(updateProfile);
+        var updatedProfile = trainerService.updateTrainerProfile(updateProfile, password);
 
         assertNotNull(updatedProfile);
-        assertEquals("UpdatedJohn", updatedProfile.getFirstName());
-        assertEquals("UpdatedDoe", updatedProfile.getLastName());
-        assertEquals("Yoga", updatedProfile.getTrainingType().getTrainingTypeName());
+        assertEquals("UpdatedJohn", updatedProfile.firstName());
+        assertEquals("UpdatedDoe", updatedProfile.lastName());
+        assertEquals("Cardio", updatedProfile.trainingType().getTrainingTypeName());
     }
 
     @Test
+    @SneakyThrows
     void getTrainerProfile_TrainerNotFound_Test() {
-        String username = "nonexistent";
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
         when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(null);
 
-        RuntimeException exception = assertThrows(RuntimeException.class, () -> trainerService.getTrainerProfile(username));
-        assertEquals("Trainee not found", exception.getMessage());
-    }
+        ResponseStatusException exception = assertThrows(ResponseStatusException.class, () -> trainerService.getTrainerProfile(username, password));
 
-    @Test
-    void updateTrainerProfile_TrainerNotFound_Test() {
-        TrainerUpdateProfileDTO updateProfile = new TrainerUpdateProfileDTO();
-        updateProfile.setUsername("nonexistent");
-
-        when(trainerRepository.findTrainerByUser_Username("nonexistent")).thenReturn(null);
-
-        RuntimeException exception = assertThrows(RuntimeException.class, () -> trainerService.updateTrainerProfile(updateProfile));
-        assertEquals("Trainer not found", exception.getMessage());
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
+        assertEquals("404 NOT_FOUND \"Trainer not found\"", exception.getMessage());
     }
 }
